--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "core-js": "^3.21.1",
     "reflect-metadata": "^0.1.13"
   }
 }
